# ChangeLog for app-arch/tar
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/tar/ChangeLog,v 1.126 2008/01/14 19:55:58 dertobi123 Exp $

  14 Jan 2008; Tobias Scherbaum <dertobi123@gentoo.org> tar-1.19.ebuild:
  ppc. stable

*tar-1.19-r1 (10 Dec 2007)

  10 Dec 2007; Mike Frysinger <vapier@gentoo.org>
  +files/tar-1.19-update-flag.patch, +tar-1.19-r1.ebuild:
  Fix from upstream for an update regression #200315 by Billy DeVincentis.

  01 Dec 2007; Markus Rothe <corsair@gentoo.org> tar-1.19.ebuild:
  Stable on ppc64

  19 Nov 2007; Joshua Kinard <kumba@gentoo.org> tar-1.19.ebuild:
  Stable on mips.

  18 Nov 2007; Mike Frysinger <vapier@gentoo.org>
  +files/tar-1.19-gnu-inline.patch, tar-1.19.ebuild:
  Fixes from upstream for changes in "extern inline" #198817 by Ryan Hill.

  16 Nov 2007; Samuli Suominen <drac@gentoo.org> tar-1.19.ebuild:
  amd64 stable

  10 Nov 2007; Raúl Porcel <armin76@gentoo.org> tar-1.19.ebuild:
  alpha/ia64/sparc/x86 stable

*tar-1.19 (10 Oct 2007)

  10 Oct 2007; Mike Frysinger <vapier@gentoo.org> +tar-1.19.ebuild:
  Version bump.

  29 Aug 2007; Markus Rothe <corsair@gentoo.org> tar-1.18-r2.ebuild:
  Stable on ppc64; bug #189682

  24 Aug 2007; Raúl Porcel <armin76@gentoo.org> tar-1.18-r2.ebuild:
  alpha/ia64 stable wrt security #189682

  23 Aug 2007; Joshua Kinard <kumba@gentoo.org> tar-1.18-r2.ebuild:
  Stable on mips, per #189682.

  23 Aug 2007; Jeroen Roovers <jer@gentoo.org> tar-1.18-r2.ebuild:
  Stable for HPPA (bug #189682).

  22 Aug 2007; Christoph Mende <angelos@gentoo.org> tar-1.18-r2.ebuild:
  Stable on amd64 wrt security bug #189682

  22 Aug 2007; Andrej Kacian <ticho@gentoo.org> tar-1.18-r2.ebuild:
  Stable on x86, security bug #189682.

  22 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org> tar-1.18-r2.ebuild:
  ppc stable, bug #189682

  22 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org> tar-1.18-r2.ebuild:
  Stable on sparc wrt security #189682
