@@ -1,6 +1,9 @@
 # ChangeLog for app-arch/zip
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/zip/ChangeLog,v 1.68 2007/12/02 20:04:09 vapier Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-arch/zip/ChangeLog,v 1.69 2008/01/16 18:46:59 armin76 Exp $
+
+  16 Jan 2008; Raúl Porcel <armin76@gentoo.org> zip-2.32-r1.ebuild:
+  alpha/ia64/sparc/x86 stable
 
 *zip-2.32-r1 (02 Dec 2007)
 
