@@ -1,6 +1,9 @@
 # ChangeLog for app-arch/tar
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/tar/ChangeLog,v 1.126 2008/01/14 19:55:58 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/tar/ChangeLog,v 1.127 2008/01/16 18:44:58 armin76 Exp $
+
+  16 Jan 2008; Raúl Porcel <armin76@gentoo.org> tar-1.19-r1.ebuild:
+  alpha/ia64/sparc/x86 stable
 
   14 Jan 2008; Tobias Scherbaum <dertobi123@gentoo.org> tar-1.19.ebuild:
   ppc. stable
